# data-mining

./: .gitignore  README.md
large-scale-classification/: .ycm_extra_conf.py  CMakeLists.txt  README.md
large-scale-classification/include/: DecisionTree.hpp  DecisionTreeInMemory.hpp  GBDTFramework.hpp  GBDTImpl.hpp  LossFunction.hpp  SquareLossFunction.hpp  TestingSet.hpp  TestingSetInMemory.hpp  TrainingSet.hpp  TrainingSetInMemory.hpp  config.hpp  defines.hpp
large-scale-classification/include/ext/: BlockingQueue.hpp  SimpleThreadPool.hpp  type.hpp
large-scale-classification/include/framework/: .#Tree.hpp  DecisionTree.hpp  GBDT.hpp  GBDTAlgorithm.hpp  LossFunction.hpp  TestingSet.hpp  TrainingSet.hpp  Tree.hpp  config.hpp  defines.hpp  log.hpp
large-scale-classification/include/in-memory-impl/: DecisionTreeInMemory.hpp  SquareLossFunction.hpp  TestingSetInMemory.hpp  TrainingSetInMemory.hpp
large-scale-classification/src/: DecisionTreeInMemory.cpp  GBDT.cpp  SquareLossFunction.cpp  TestingFileInMemory.cpp  TrainingSetInMemory.cpp  main.cpp
large-scale-classification/src/framework/: GBDT.cpp  GBDTAlgorithm.cpp  Tree.cpp  main.cpp
large-scale-classification/src/in-memory-impl/: DecisionTreeInMemory.cpp  SquareLossFunction.cpp  TestingFileInMemory.cpp  TrainingSetInMemory.cpp
large-scale-classification/test/: IOTest.cpp  TrainingSetInMemoryTest.cpp
linear-regression/: .ycm_extra_conf.py  Makefile
linear-regression/include/: LinearRegression.hpp  config.hpp
linear-regression/sample_data/: predict.csv  result.csv  traning.csv
linear-regression/src/: LinearRegression.cpp  main.cpp
